--- a/project-base/public/private/src/main/scss/style.scss
+++ b/project-base/public/private/src/main/scss/style.scss
@@ -3,44 +3,43 @@
 @import "../../lib/bower/scss/normalize-scss/normalize";
 
 @import
-  "../../lib/bower/scss/foundation/foundation/accordion",
-  "../../lib/bower/scss/foundation/foundation/alert-boxes",
-  "../../lib/bower/scss/foundation/foundation/block-grid",
-  "../../lib/bower/scss/foundation/foundation/breadcrumbs",
-  "../../lib/bower/scss/foundation/foundation/button-groups",
-  "../../lib/bower/scss/foundation/foundation/buttons",
-  "../../lib/bower/scss/foundation/foundation/clearing",
-  "../../lib/bower/scss/foundation/foundation/dropdown",
-  "../../lib/bower/scss/foundation/foundation/dropdown-buttons",
-  "../../lib/bower/scss/foundation/foundation/flex-video",
-  "../../lib/bower/scss/foundation/foundation/forms",
-  "../../lib/bower/scss/foundation/foundation/grid",
-  "../../lib/bower/scss/foundation/foundation/inline-lists",
-  "../../lib/bower/scss/foundation/foundation/joyride",
-  "../../lib/bower/scss/foundation/foundation/keystrokes",
-  "../../lib/bower/scss/foundation/foundation/labels",
-  "../../lib/bower/scss/foundation/foundation/magellan",
-  "../../lib/bower/scss/foundation/foundation/orbit",
-  "../../lib/bower/scss/foundation/foundation/pagination",
-  "../../lib/bower/scss/foundation/foundation/panels",
-  "../../lib/bower/scss/foundation/foundation/pricing-tables",
-  "../../lib/bower/scss/foundation/foundation/progress-bars",
-  "../../lib/bower/scss/foundation/foundation/reveal",
-  "../../lib/bower/scss/foundation/foundation/side-nav",
-  "../../lib/bower/scss/foundation/foundation/split-buttons",
-  "../../lib/bower/scss/foundation/foundation/sub-nav",
-  "../../lib/bower/scss/foundation/foundation/switch",
-  "../../lib/bower/scss/foundation/foundation/tables",
-  "../../lib/bower/scss/foundation/foundation/tabs",
-  "../../lib/bower/scss/foundation/foundation/thumbs",
-  "../../lib/bower/scss/foundation/foundation/tooltips",
-  "../../lib/bower/scss/foundation/foundation/offcanvas",
-  "../../lib/bower/scss/foundation/foundation/visibility";
+  "../../lib/manual/scss/foundation/accordion",
+  "../../lib/manual/scss/foundation/alert-boxes",
+  "../../lib/manual/scss/foundation/block-grid",
+  "../../lib/manual/scss/foundation/breadcrumbs",
+  "../../lib/manual/scss/foundation/button-groups",
+  "../../lib/manual/scss/foundation/buttons",
+  "../../lib/manual/scss/foundation/clearing",
+  "../../lib/manual/scss/foundation/dropdown",
+  "../../lib/manual/scss/foundation/dropdown-buttons",
+  "../../lib/manual/scss/foundation/flex-video",
+  "../../lib/manual/scss/foundation/forms",
+  "../../lib/manual/scss/foundation/grid",
+  "../../lib/manual/scss/foundation/inline-lists",
+  "../../lib/manual/scss/foundation/joyride",
+  "../../lib/manual/scss/foundation/keystrokes",
+  "../../lib/manual/scss/foundation/labels",
+  "../../lib/manual/scss/foundation/magellan",
+  "../../lib/manual/scss/foundation/orbit",
+  "../../lib/manual/scss/foundation/pagination",
+  "../../lib/manual/scss/foundation/panels",
+  "../../lib/manual/scss/foundation/pricing-tables",
+  "../../lib/manual/scss/foundation/progress-bars",
+  "../../lib/manual/scss/foundation/reveal",
+  "../../lib/manual/scss/foundation/side-nav",
+  "../../lib/manual/scss/foundation/split-buttons",
+  "../../lib/manual/scss/foundation/sub-nav",
+  "../../lib/manual/scss/foundation/switch",
+  "../../lib/manual/scss/foundation/tables",
+  "../../lib/manual/scss/foundation/tabs",
+  "../../lib/manual/scss/foundation/thumbs",
+  "../../lib/manual/scss/foundation/tooltips",
+  "../../lib/manual/scss/foundation/offcanvas",
+  "../../lib/manual/scss/foundation/visibility";
 
 
 //foundation
-//@import "functions";
-//@import "settings";
+@import "foundation/settings";
 
 @import "first";
 @import "second";
